@@ -33,7 +33,8 @@ class WaterIVEngine : public Plasma::DataEngine
             VERSION_ID gets incremented every time compatibility is broken.
             Plasmoids can get this value with 'engine_version'.
         */
-        static const int VERSION_ID = 3;   // 3 : 0.3.0 +
+        static const int VERSION_ID = 4;   // 4 : 0.3.1 + 
+                                           // 3 : 0.3.0
                                            // 2 : 0.2.1
                                            // 1 : 0.2.0 
                                            // 0 : 0.1.0
@@ -50,7 +51,7 @@ class WaterIVEngine : public Plasma::DataEngine
         static const QString PREFIX_SERIES;
         static const QString PREFIX_TOC;
 
-        static const int MAX_VALUES = 3;  // max accumulated values (1wk@15min)
+        static const int MAX_VALUES = 3;  //672 max accumulated values (1wk@15min)
 
         WaterIVEngine(QObject* parent, const QVariantList& args);
         void setEngineData( QString source, QString key, QVariant value );
